calendar has been done

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,12 +7,14 @@
 body {
   display: flex;
   justify-content: center;
-  max-width: 706px;
+  height: 100vh;
 }
 
 .calendar {
   display: flex;
   flex-wrap: wrap;
+  align-content: center;
+  max-width: 706px;
   gap: 1px;
 
   &__day {
@@ -24,11 +26,11 @@ body {
     height: 100px;
     background-color: #eee;
     border: 1px solid;
-    transition-duration: .5s;
+    transition-duration: 0.5s;
 
     &:hover {
       cursor: pointer;
-      background-color: #FFBFCB;
+      background-color: #ffbfcb;
       transform: translateY(-20px);
     }
   }
@@ -50,7 +52,7 @@ $day-start-styles: (
   'thu': 303px,
   'fri': 404px,
   'sat': 505px,
-  'sun': 606px
+  'sun': 606px,
 );
 
 @each $day-of-start, $margins in $day-start-styles {
