add task solution

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -54,7 +54,7 @@ body {
   }
 
   @for $i from 1 through 31 {
-    &__day--#{$i}::before {
+    &__day:nth-child(#{$i})::before {
       content: '#{$i}';
     }
   }
