added some vars

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -22,8 +22,8 @@ body {
     display: none;
     justify-content: center;
     align-items: center;
-    width: 100px;
-    height: 100px;
+    width: $square-size;
+    height: $square-size;
     background-color: #eee;
     border: 1px solid;
     transition-duration: 0.5s;
@@ -44,16 +44,6 @@ body {
     font-size: 30px;
   }
 }
-
-$day-start-styles: (
-  'mon': 0,
-  'tue': 101px,
-  'wed': 202px,
-  'thu': 303px,
-  'fri': 404px,
-  'sat': 505px,
-  'sun': 606px,
-);
 
 @each $day-of-start, $margins in $day-start-styles {
   .calendar--start-day-#{$day-of-start} :first-child {
