--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -53,7 +53,7 @@
     }
   }
 
-  @for $i from 1 through $days-of-mounth {
+  @for $i from 1 through $month-length {
     &__day:nth-child(#{$i})::before {
       content: '#{$i}';
     }
