--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -1,41 +1,6 @@
-// Color variables
-$border-color: #000;
-$day-color: #eee;
-$hover-color: #ffbfcb;
-
-// Size variables
-$cell-size: 100px;
-$padding: 10px;
-$gap: 1px;
-$days-in-a-week: 7;
-$days: (
-  'mon': 0,
-  'tue': 1,
-  'wed': 2,
-  'thu': 3,
-  'fri': 4,
-  'sat': 5,
-  'sun': 6,
-);
-
-// Page styles
-.page {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  margin: 0;
-  height: 100vh;
-
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 30px;
-}
-
-// Calendar styles
 .calendar {
   display: flex;
   flex-wrap: wrap;
-
   gap: $gap;
 
   padding: $padding;
@@ -44,6 +9,7 @@ $days: (
 
   &__day {
     display: flex;
+
     position: relative;
 
     height: $cell-size;
@@ -61,11 +27,14 @@ $days: (
     @for $i from 1 through 31 {
       &:nth-of-type(#{$i})::before {
         content: '#{$i}';
-        position: absolute;
-        bottom: ($cell-size - 2) / 2;
-        right: ($cell-size - 3) / 2;
-        transform: translate(50%, 50%);
       }
+    }
+
+    &::before {
+      position: absolute;
+      bottom: ($cell-size - 2) / 2;
+      right: ($cell-size - 3) / 2;
+      transform: translate(50%, 50%);
     }
 
     &:hover {
