--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,9 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 30px;
 }
 
 body {
@@ -17,6 +20,25 @@ body {
   max-width: 706px;
   gap: 1px;
 
+  @for $number from 1 through 31 {
+    & :nth-child(#{$number})::before {
+      content: '#{$number}';
+      position: absolute;
+    }
+  }
+
+  @each $day-of-start, $margins in $day-start-styles {
+    &--start-day-#{$day-of-start} :first-child {
+      margin-left: $margins;
+    }
+  }
+
+  @for $day-show from 29 to 32 {
+    &--month-length-#{$day-show} :nth-child(-n + #{$day-show}) {
+      display: flex;
+    }
+  }
+
   &__day {
     position: relative;
     display: none;
@@ -24,35 +46,17 @@ body {
     align-items: center;
     width: $square-size;
     height: $square-size;
+
     background-color: #eee;
     border: 1px solid;
+
     transition-duration: 0.5s;
+    transition-property: transform, background-color;
 
     &:hover {
       cursor: pointer;
       background-color: #ffbfcb;
       transform: translateY(-20px);
     }
-  }
-}
-
-@for $number from 1 through 31 {
-  .calendar :nth-child(#{$number})::before {
-    content: '#{$number}';
-    position: absolute;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 30px;
-  }
-}
-
-@each $day-of-start, $margins in $day-start-styles {
-  .calendar--start-day-#{$day-of-start} :first-child {
-    margin-left: $margins;
-  }
-}
-
-@for $day-show from 29 to 32 {
-  .calendar--month-length-#{$day-show} :nth-child(-n + #{$day-show}) {
-    display: flex;
   }
 }
