add task solution

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,87 +1,3 @@
-@use 'sass:map';
-
-$gap-size: 1px;
-$calendar-padding: 10px;
-$day-size: 100px;
-$border-width: 1px;
-$month-length: 31;
-$start-day: sun;
-$days-of-week: (
-  mon: 0,
-  tue: 1,
-  wed: 2,
-  thu: 3,
-  fri: 4,
-  sat: 5,
-  sun: 6,
-);
-$calendar-size: $gap-size * 6 + $day-size * 7;
-
-body {
-  margin: 0;
-  padding: 0;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
-.calendar {
-  display: flex;
-  flex-wrap: wrap;
-  width: $calendar-size;
-  gap: $gap-size;
-  padding: $calendar-padding;
-
-  &__day {
-    width: $day-size;
-    height: $day-size;
-    border: $border-width solid black;
-    background-color: #eee;
-    box-sizing: border-box;
-    position: relative;
-    cursor: pointer;
-    transition:
-      transform 0.5s,
-      background-color 0.5s;
-
-    &::before {
-      content: '';
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -50%);
-      font-family: Arial, sans-serif;
-      font-size: 30px;
-    }
-
-    &:hover {
-      background-color: #ffbfcb;
-      transform: translateY(-20px);
-    }
-  }
-
-  @for $day from 1 through $month-length {
-    .calendar__day:nth-child(#{$day})::before {
-      content: '#{$day}';
-    }
-  }
-
-  // $start-index: map.get($days-of-week, $start-day);
-
-  // .calendar__day:first-child {
-  //   margin-left: ($day-size + $gap-size) * $start-index;
-  // }
-
-  @each $day, $index in $days-of-week {
-    &--start-day-#{$day} .calendar__day:first-child {
-      margin-left: ($day-size + $gap-size) * $index;
-    }
-  }
-
-  @for $last-days from 28 through 31 {
-    &--month-length-#{$last-days} &__day:nth-child(n + #{$last-days + 1}) {
-      display: none;
-    }
-  }
-}
+@import './mixins/variables';
+@import './blocks/body';
+@import './blocks/calendar';
