--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -5,16 +5,32 @@ $gap: 1px;
 $padding: 10px;
 $font-size: 30px;
 $animation-duration: 0.5s;
+$month-length: 31;
+$calendar-size: $gap * 6 + $day-size * 7;
+$days-of-week: (
+  mon: 0,
+  tue: 1,
+  wed: 2,
+  thu: 3,
+  fri: 4,
+  sat: 5,
+  sun: 6,
+);
 
 body {
   margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  height: 100vh;
 }
 
 .calendar {
   display: flex;
   gap: 1px;
   flex-wrap: wrap;
-  width: $padding * 2 + $day-size * 7 + $gap * 6 + $border-width * 7 * 2;
+  width: $calendar-size;
   padding: $padding;
 
   &__day {
@@ -22,11 +38,13 @@ body {
     width: $day-size;
     background-color: #eee;
     border: $border-width solid black;
-    position: relative;
-    text-align: center;
+    box-sizing: border-box;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     font-family: Arial, sans-serif;
     font-size: $font-size;
-    line-height: $day-size;
+
     transition:
       transform $animation-duration,
       background-color $animation-duration;
@@ -38,21 +56,20 @@ body {
     }
   }
 
-  @for $i from 1 through 31 {
-    .calendar__day:nth-child(#{$i})::before {
-      content: '#{$i}';
+  @for $day from 1 through $month-length {
+    .calendar__day:nth-child(#{$day})::before {
+      content: '#{$day}';
     }
   }
 
-  @each $day, $start in (mon: 1, tue: 2, wed: 3, thu: 4, fri: 5, sat: 6, sun: 0)
-  {
-    &--start-#{$day} .calendar__day:first-child {
-      margin-left: calc($start * ($day-size + $gap + 2 * $border-width));
+  @each $day, $index in $days-of-week {
+    &--start-day-#{$day} .calendar__day:first-child {
+      margin-left: ($day-size + $gap) * $index;
     }
   }
 
-  @for $i from 28 through 31 {
-    &--month-length-#{$i} .calendar__day:nth-child(n + #{$i}) {
+  @for $last-days from 28 through 31 {
+    &--month-length-#{$last-days} &__day:nth-child(n + #{$last-days + 1}) {
       display: none;
     }
   }
