--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,15 +1,3 @@
-html {
-  font-family: Arial, Helvetica, sans-serif;
-  font-size: 30px;
-}
-
-body {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
-  margin: 0;
-  height: 100vh;
-}
-
+@import 'reset';
+@import 'variables';
 @import 'main';
