--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,29 +1,17 @@
-$square-size: 100px;
-$square-color: #eee;
-$gap-between-square: 1px;
-$border-width: 1px;
-$calendar-padding: 10px;
-$calendar-width: $square-size * 7 + $gap-between-square * 6;
-$color-hovered-cell: #ffbfcb;
-$hovered-cell-up: -20px;
-$month-length: 31;
-$day-of-week: (
-  mon: 0,
-  tue: 1,
-  wed: 2,
-  thu: 3,
-  fri: 4,
-  sat: 5,
-  sun: 6,
-);
+.body {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
 
 .calendar {
   display: flex;
 
-  gap: $gap-between-square;
+  gap: 1px;
   flex-wrap: wrap;
 
-  padding: $calendar-padding;
+  padding: 10px;
 
   max-width: $calendar-width;
 
@@ -37,8 +25,8 @@ $day-of-week: (
     width: $square-size;
     height: $square-size;
 
-    border: $border-width solid black;
-    background-color: $square-color;
+    border: 1px solid black;
+    background-color: #eee;
 
     transition:
       background-color 0.5s,
@@ -62,7 +50,7 @@ $day-of-week: (
 @each $day-name, $day-number in $day-of-week {
   .calendar--start-day-#{$day-name} {
     .calendar__day:first-child {
-      margin-left: $day-number * ($square-size + $border-width);
+      margin-left: $day-number * ($square-size + 1px);
     }
   }
 }
