--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -16,32 +16,18 @@ body {
   margin: 0 auto;
   max-width: $calendar-width;
 
-  $start-days: (mon 0, tue 1, wed 2, thu 3, fri 4, sat 5, sun 6);
-
   @each $start-day, $marg in $start-days {
     &--start-day-#{$start-day} :first-child {
       margin-left: $marg * 101;
     }
   }
 
-  @for $day from 28 to 32 {
+  @for $day from 28 through 31 {
     &--month-length-#{$day} :nth-child(n + #{$day + 1}) {
       visibility: hidden;
     }
   }
 
-  &--month-length-29 {
-    margin-top: 50px;
-  }
-
-  @for $i from 1 to 32 {
-    &__day:nth-child(#{$i}):before {
-      content: '#{$i}';
-      color: $main-color;
-      font-family: Arial, Helvetica, sans-serif;
-      font-size: 30px;
-    }
-  }
   &__day {
     box-sizing: border-box;
     width: 100px;
@@ -53,12 +39,20 @@ body {
     transition: transform 500ms;
     justify-content: center;
     align-items: center;
-  }
 
-  &__day:hover {
-    cursor: pointer;
+    @for $i from 1 through 31 {
+      &:nth-child(#{$i}):before {
+        content: '#{$i}';
+        color: $main-color;
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 30px;
+      }
+    }
+    &:hover {
+      cursor: pointer;
 
-    background-color: #ffbfcb;
-    transform: translateY(-20px);
+      background-color: #ffbfcb;
+      transform: translateY(-20px);
+    }
   }
 }
