--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -3,7 +3,7 @@ $gapSize: 1px;
 $daySize: 100px;
 $paddingSize: 10px;
 $daysOfWeek: (sun: 0, mon: 1, tue: 2, wed: 3, thu: 4, fri: 5, sat: 6);
-$month-length: (28, 29, 30, 31);
+// $month-length: (28, 29, 30, 31);
 
 body {
   font-family: $fontBody;
@@ -14,6 +14,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+
 
   &__month-length {
     display: flex;
