--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -46,9 +46,9 @@ body {
   }
 }
 
-@for $i from 0 through 6 {
-  .calendar--start-day-#{nth($days, $i + 1)} :first-child {
-    margin-left: 100 * $i + 1 * $i;
+@each $day, $index in $days {
+  .calendar--start-day-#{$day} :first-child {
+    margin-left: 100 * $index + 1 * $index;
   }
 }
 
