--- a/src/styles/blocks/reset.scss
+++ b/src/styles/blocks/reset.scss
@@ -1,16 +1,17 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   height: 100vh;
-
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-
   font-family: Arial, sans-serif;
   font-size: 30px;
 }
 
-* {
-  box-sizing: border-box;
+.page {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
