--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -5,10 +5,10 @@
   padding: 10px;
   gap: $box-gap;
 
-  @each $d, $i in $day {
-    &--start-day-#{$d} {
+  @each $day, $index in $weekDays {
+    &--start-day-#{$day} {
       .calendar__day:first-child {
-        margin-left: $i * ($box-size + $box-gap);
+        margin-left: $index * ($box-size + $box-gap);
       }
     }
   }
@@ -22,7 +22,7 @@
     height: $box-size;
     background-color: $bg-day;
 
-    border: 1px solid #000;
+    border: 1px solid $border-color;
 
     transition-duration: 0.5s;
 
