--- a/src/styles/blocks/variables.scss
+++ b/src/styles/blocks/variables.scss
@@ -1,5 +1,6 @@
-$day: (mon 0, tue 1, wed 2, thu 3, fri 4, sat 5, sun 6);
+$weekDays: (mon 0, tue 1, wed 2, thu 3, fri 4, sat 5, sun 6);
 $bg-day: #eee;
 $bg-day-hover: #ffbfcb;
 $box-size: 100px;
 $box-gap: 1px;
+$border-color: #000;
