--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,61 @@
+$cell-size: 100px;
+$columns-number: 7;
+$cell-color: #eee;
+$cell-hover-color: #ffbfcb;
+
 body {
   margin: 0;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.calendar {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1px;
+  width: ($cell-size * $columns-number) + 6px;
+  padding-inline: 10px;
+}
+
+.calendar__day {
+  height: $cell-size;
+  width: $cell-size;
+  background-color: $cell-color;
+  box-sizing: border-box;
+  border: 1px solid black;
+  display: flex;
+  justify-content: center;
+}
+
+@for $i from 1 through 31 {
+  .calendar :nth-child(#{$i})::before {
+    content: '#{$i}';
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 30px;
+    align-self: center;
+  }
+}
+
+$start-day: (mon 0, tue 1, wed 2, thu 3, fri 4, sat 5, sun 6);
+
+@each $day, $coefficient in $start-day {
+  .calendar--start-day-#{$day} :nth-child(1) {
+    margin-left: $cell-size * $coefficient + $coefficient;
+  }
+}
+
+@for $month-length from 28 through 31 {
+  .calendar--month-length-#{$month-length}
+    :nth-child(n + #{$month-length + 1}) {
+    display: none;
+  }
+}
+
+.calendar__day:hover {
+  cursor: pointer;
+  background-color: $cell-hover-color;
+  transform: translateY(-20px);
+  transition-duration: 500ms;
 }
