--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -32,9 +32,9 @@ body {
     line-height: 100px;
     background-color: #eee;
 
-    &:first-child {
-      margin-left: calc(100px * 6 + 12px);
-    }
+    // &:first-child {
+    //   margin-left: calc(100px * 6 + 12px);
+    // }
 
     &::before {
       content: '';
@@ -50,8 +50,10 @@ body {
   }
 
   @each $name, $value in $days {
-    .calendar--start-day--#{$name} .calendar__day:first-child {
+    .calendar--start-day--#{$name} {
+      .calendar__day:first-child {
       margin-left: calc($value * (100px + 1px));
+      }
     }
   }
 }
