--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -50,11 +50,9 @@ body {
   }
 
   @each $name, $value in $days {
-    .calendar--start-day--#{$name} {
-      .calendar__day:first-child {
+    .calendar--start-day-#{$name} .calendar__day:first-child {
       margin-left: calc($value * (100px + 1px));
       }
-    }
   }
 }
 
