changed index.scss hover

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -34,9 +34,7 @@ li {
   flex-wrap: wrap;
   width: 707px;
   list-style-type: decimal;
-  transition-duration:
-    linear 0,
-    5s;
+  transition: all 0.5s;
 
   .calendar__day {
     display: flex;
@@ -53,10 +51,12 @@ li {
     text-align: center;
     font-size: $square-text-size;
     font-family: $square-text-family;
+    transition: all 0.5s;
+    cursor: pointer;
 
     &:hover {
-      cursor: pointer;
-      transform: translate(0, -2px);
+      transform: translateY(-20px);
+      background-color: #ffbfcb;
     }
 
     &:first-child {
