--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,6 @@
+$size: 100px;
+$gap: 1px;
+$padding: 10px;
 $days: (
   mon: 0,
   tue: 1,
@@ -5,41 +8,49 @@ $days: (
   thu: 3,
   fri: 4,
   sat: 5,
-  sun: 6
-  );
+  sun: 6,
+);
+
+* {
+  box-sizing: border-box;
+}
 
 body {
+  display: flex;
+  height: 100vh;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
   margin: 0;
-  position: relative;
 }
 
 .calendar {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translateY(5%) translateX(-50%);
   display: flex;
   flex-wrap: wrap;
-  gap: 1px;
-  padding: 10px;
-  width: calc(7 * 100px + 6px + 2 * 7px);
+  gap: $gap;
+  padding: $padding;
+  width: calc((7 * $size) + (6 * $gap) + (2 * $padding));
 
   &__day {
     border: 1px solid black;
-    height: 100px;
-    width: 100px;
-    text-align: center;
-    line-height: 100px;
+    height: $size;
+    width: $size;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background-color: #eee;
-
-    // &:first-child {
-    //   margin-left: calc(100px * 6 + 12px);
-    // }
+    transition-duration: 0.5s;
 
     &::before {
       content: '';
       font-family: Arial, Helvetica, sans-serif;
       font-size: 30px;
+    }
+
+    &:hover {
+      transform: translateY(-20px);
+      background-color: #ffbfcb;
+      cursor: pointer;
     }
   }
 
@@ -50,30 +61,16 @@ body {
   }
 
   @each $name, $value in $days {
-    .calendar--start-day-#{$name} .calendar__day:first-child {
-      margin-left: calc($value * (100px + 1px));
-      }
+    &--start-day-#{$name} .calendar__day:first-child {
+      margin-left: calc(#{$value} * ($size + $gap));
+
+      // margin-left: calc(6 * (100px + 1px));
+    }
+  }
+
+  @for $i from 28 through 31 {
+    &--month-length-#{$i} :nth-child(n + #{$i + 1}) {
+      display: none;
+    }
   }
 }
-
-
-// .calendar {
-//   margin: auto;
-//   height: 100vh;
-//   display: flex;
-//   place-content: flex-start;
-//   flex-wrap: wrap;
-//   padding: 10px;
-//   width: calc(7 * 100px + 6px + 7 * 2px + 20px);
-
-//   &__day {
-//     border: 1px solid black;
-//     height: 100px;
-//     width: 100px;
-//     text-align: center;
-//     line-height: 100px;
-//     background-color: #eee;
-//   }
-
-
-
