--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -28,11 +28,12 @@ body {
     background-color: #eee;
     border: 1px solid black;
     position: relative;
+    top: 0;
     transition: all 0.5s;
 
     &:hover {
       cursor: pointer;
-      top: -20px; 
+      top: -20px;
       background-color: #ffbfcb;
     }
 
