--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -38,7 +38,7 @@ body {
     }
 
     @for $i from 1 through 31 {
-      &.calendar__day--#{$i}::before {
+      &:nth-child(#{$i}n):before {
         content: '#{$i}';
         font-family: Arial, Helvetica, sans-serif;
         font-size: 30px;
