--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -37,8 +37,9 @@ body {
       background-color: #ffbfcb;
     }
 
+
     @for $i from 1 through 31 {
-      &:nth-child(#{$i}n):before {
+      &:nth-child(#{$i}):before {
         content: '#{$i}';
         font-family: Arial, Helvetica, sans-serif;
         font-size: 30px;
