--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,76 @@
 body {
   margin: 0;
+  min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+@function find-index($list, $value) {
+  @for $i from 1 through length($list) {
+    @if nth($list, $i) == $value {
+      @return $i;
+    }
+  }
+
+  @return null;
+}
+
+.calendar {
+  width: 707px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1px;
+
+  $start-days: mon, tue, wed, thu, fri, sat, sun;
+
+  @each $day in $start-days {
+    &--start-day-#{$day} {
+      .calendar__day:first-child {
+        $index: find-index($start-days, $day);
+
+        margin-left: calc(#{$index - 1} * (101px));
+      }
+    }
+  }
+
+  @for $length from 28 through 31 {
+    &--month-length-#{$length} {
+      .calendar__day:nth-child(n + #{$length + 1}) {
+        display: none;
+      }
+    }
+  }
+
+  &__day {
+    width: 100px;
+    height: 100px;
+    border: solid 1px black;
+    background-color: #eee;
+    position: relative;
+    cursor: pointer;
+    transition: all 0.5s ease;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    @for $i from 1 through 31 {
+      &:nth-child(#{$i})::before {
+        content: '#{$i}';
+      }
+    }
+
+    &::before {
+      font-family: Arial, sans-serif;
+      font-size: 30px;
+    }
+    &:hover {
+      background-color: #ffbfcb;
+      transform: translateY(-20px);
+    }
+  }
 }
