--- a/src/styles/blocks/main.scss
+++ b/src/styles/blocks/main.scss
@@ -39,7 +39,7 @@ body {
 
   @each $day, $number in (mon 0, tue 1, wed 2, thu 3, fri 4, sat 5, sun 6) {
     &--start-day-#{$day} .calendar__date:first-child {
-      margin-left: calc(#{$number} * #{$calendarDateSize});
+      margin-left: calc(#{$number} * #{$calendarDateSize} + #{$calendarDateGap} * #{$number});
     }
   }
 
