--- a/src/styles/blocks/main.scss
+++ b/src/styles/blocks/main.scss
@@ -1,4 +1,8 @@
 body {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 30px;
@@ -9,10 +13,11 @@ body {
   flex-wrap: wrap;
   padding: 10px;
   gap: $calendarDateGap;
-  width: 716px;
+  width: 706px;
   counter-reset: first;
 
   &__date {
+    box-sizing: border-box;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -39,7 +44,9 @@ body {
 
   @each $day, $number in (mon 0, tue 1, wed 2, thu 3, fri 4, sat 5, sun 6) {
     &--start-day-#{$day} .calendar__date:first-child {
-      margin-left: calc(#{$number} * #{$calendarDateSize} + #{$calendarDateGap} * #{$number});
+      margin-left: calc(
+        #{$number} * #{$calendarDateSize} + #{$calendarDateGap} * #{$number}
+      );
     }
   }
 
