--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -20,7 +20,11 @@ body {
     box-sizing: border-box;
     border: 1px solid black;
     display: flex;
+    align-items: center;
     justify-content: center;
+
+    font-family: $main-font;
+    font-size: $text-size;
 
     &:hover {
       cursor: pointer;
@@ -33,9 +37,7 @@ body {
   @for $i from 1 through 31 {
     & :nth-child(#{$i})::before {
       content: '#{$i}';
-      font-family: Arial, Helvetica, sans-serif;
-      font-size: 30px;
-      align-self: center;
+      display: block;
     }
   }
 
