added recent edits

--- a/src/styles/blocks/main.scss
+++ b/src/styles/blocks/main.scss
@@ -28,7 +28,7 @@ body {
     border: 1px solid;
     background-color: $calendarDateBG;
     cursor: pointer;
-    transition: transform 0.5s;
+    transition: all 0.5s;
   }
 
   &__day:hover {
