--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,5 @@
+@import 'variable';
+
 body {
   margin: 0;
   min-height: 100vh;
@@ -10,23 +12,11 @@ body {
   box-sizing: border-box;
 }
 
-@function find-index($list, $value) {
-  @for $i from 1 through length($list) {
-    @if nth($list, $i) == $value {
-      @return $i;
-    }
-  }
-
-  @return null;
-}
-
 .calendar {
   width: 707px;
   display: flex;
   flex-wrap: wrap;
   gap: 1px;
-
-  $start-days: mon, tue, wed, thu, fri, sat, sun;
 
   @each $day in $start-days {
     &--start-day-#{$day} {
