--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,3 +1,76 @@
+$day-size: 100px;
+$gap-size: 1px;
+$day-with-gap: $day-size + $gap-size;
+$padding-size: 10px;
+$font-size: 30px;
+$font-family: Arial, sans-serif;
+$max-month-length: 31;
+
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.calendar {
+  display: flex;
+  flex-wrap: wrap;
+  gap: $gap-size;
+  width: calc(7 * #{$day-size} + 6 * #{$gap-size} + #{$padding-size * 2});
+  padding: $padding-size;
+
+  @for $days from 28 through $max-month-length {
+    &--month-length-#{$days} :nth-child(n + #{$days + 1}) {
+      display: none;
+    }
+  }
+
+  &__day {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: $day-size;
+    width: $day-size;
+    background-color: #eee;
+    border: 1px solid black;
+    padding: $padding-size;
+    transition: 0.5s;
+
+    &:hover {
+      cursor: pointer;
+      background-color: #ffbfcb;
+      transform: translateY(-20px);
+    }
+
+    @for $i from 1 through $max-month-length {
+      &:nth-child(#{$i})::before {
+        content: '#{$i}';
+        font-size: $font-size;
+        font-family: $font-family;
+      }
+    }
+  }
+
+  @each $day,
+    $margin
+      in (
+        mon: 0,
+        tue: $day-with-gap,
+        wed: 2 * $day-with-gap,
+        thu: 3 * $day-with-gap,
+        fri: 4 * $day-with-gap,
+        sat: 5 * $day-with-gap,
+        sun: 6 * $day-with-gap
+      )
+  {
+    &--start-day-#{$day} .calendar__day:first-child {
+      margin-left: $margin;
+    }
+  }
 }
