little improvements added

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -26,11 +26,14 @@
     line-height: 98px;
     transition: $std-transition;
 
+    &::before {
+      font-family: $std-font-family;
+      font-size: $std-font-size;
+    }
+
     @for $i from 1 through 31 {
       &:nth-child(#{$i})::before {
         content: '#{$i}';
-        font-family: $std-font-family;
-        font-size: $std-font-size;
       }
     }
 
