--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,10 +1,4 @@
-$day-size: 100px;
-$gap-size: 1px;
-$day-with-gap: $day-size + $gap-size;
-$padding-size: 10px;
-$font-size: 30px;
-$font-family: Arial, sans-serif;
-$max-month-length: 31;
+@import 'components/variables.scss';
 
 * {
   box-sizing: border-box;
@@ -57,17 +51,7 @@ body {
     }
   }
 
-  @each $day,
-    $margin
-      in (
-        mon: 0,
-        tue: $day-with-gap,
-        wed: 2 * $day-with-gap,
-        thu: 3 * $day-with-gap,
-        fri: 4 * $day-with-gap,
-        sat: 5 * $day-with-gap,
-        sun: 6 * $day-with-gap
-      )
+  @each $day,$margin in $days-with-gaps
   {
     &--start-day-#{$day} .calendar__day:first-child {
       margin-left: $margin;
