--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,4 +1,4 @@
-@import 'components/variables.scss';
+@import 'components/variables';
 
 * {
   box-sizing: border-box;
@@ -51,8 +51,7 @@ body {
     }
   }
 
-  @each $day,$margin in $days-with-gaps
-  {
+  @each $day, $margin in $days-with-gaps {
     &--start-day-#{$day} .calendar__day:first-child {
       margin-left: $margin;
     }
