--- a/src/styles/blocks/calendar.scss
+++ b/src/styles/blocks/calendar.scss
@@ -32,7 +32,9 @@
       cursor: pointer;
       background-color: #ffbfcb;
       transform: translateY(-20px);
-      transition: 0.5s;
+      transition-duration:
+        background-color 0.5s,
+        transform 0.5s;
     }
   }
 
