--- a/src/styles/components/variables.scss
+++ b/src/styles/components/variables.scss
@@ -5,12 +5,4 @@ $padding-size: 10px;
 $font-size: 30px;
 $font-family: Arial, sans-serif;
 $max-month-length: 31;
-$days-with-gaps: (
-  mon: 0,
-  tue: $day-with-gap,
-  wed: 2 * $day-with-gap,
-  thu: 3 * $day-with-gap,
-  fri: 4 * $day-with-gap,
-  sat: 5 * $day-with-gap,
-  sun: 6 * $day-with-gap,
-);
+$days: mon, tue, wed, thu, fri, sat, sun;
