--- a/src/styles/components/variables.scss
+++ b/src/styles/components/variables.scss
@@ -5,4 +5,12 @@ $padding-size: 10px;
 $font-size: 30px;
 $font-family: Arial, sans-serif;
 $max-month-length: 31;
-$days: mon, tue, wed, thu, fri, sat, sun;
+$days-with-index: (
+  mon: 0,
+  tue: 1,
+  wed: 2,
+  thu: 3,
+  fri: 4,
+  sat: 5,
+  sun: 6,
+);
