--- a/src/styles/utils/variable.scss
+++ b/src/styles/utils/variable.scss
@@ -1,14 +1,17 @@
 $width-days: 100px;
 $hight-days: 100px;
-
 $count-column: 7;
 $gap-width: 6px;
-
 $main-gap: 1px;
 $main-width: $gap-width + $width-days * $count-column;
-$margin-left-first-day: $width-days * ($count-column - 1) + $gap-width;
 $main-font-size: 30px;
-
 $padding-calendar: 10px;
-
-$days-of-week: (mon, tue, wed, thu, fri, sat, sun);
+$days-of-week: (
+  'mon': 0,
+  'tue': 1,
+  'wed': 2,
+  'thu': 3,
+  'fri': 4,
+  'sat': 5,
+  'sun': 6,
+);
