--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -6,3 +6,12 @@ $month-lengths: (
   30: 31,
   31: 32,
 );
+$weekday-offsets: (
+  'mon': 0,
+  'tue': $margin-left,
+  'wed': $margin-left * 2,
+  'thu': $margin-left * 3,
+  'fri': $margin-left * 4,
+  'sat': $margin-left * 5,
+  'sun': $margin-left * 6
+);
