fix get-map method

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -67,7 +67,7 @@
   &--start-day {
     &-#{'sun'} {
       .calendar__day:first-child {
-        margin-left: map-get($weekday-offsets, 'sun');
+        margin-left: map.get($weekday-offsets, 'sun');
       }
     }
   }
